--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="column col-6" align="center"><a class="a-hvr" href="#">HAIDER QADIR KHAN</a></div>
-			<div class="column col-6" align="center" ><a class="a-hvr" href="About.html" alt="#">About</a></div>
+			<div class="column col-6" align="center" ><a class="a-hvr" href="about.html" alt="#">About</a></div>
 		</div>
 	</div>
 	
@@ -79,7 +79,7 @@
 			<h3 class="h-hvr">Software Craftsman</h3>
 			
 			<ul>
-				<a href="https://github.com/HaiderQK" class="pad">	<i class="fa fa-github"  style="font-size:35px"></i></a>
+				<a href="https://github.com/HaiderQK" class="pad"><i class="fa fa-github"  style="font-size:35px"></i></a>
 				<a href="#" class="pad"><i class="fa fa-linkedin-square" style="font-size:35px" ></i></a>	
  				<a href="#" class="pad"><i class="fa fa-twitter-square" style="font-size:35px" ></i></a>
 				<a href="#"class="pad"><i class="fa fa-facebook-square" style="font-size:35px" ></i></a>
