--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="column col-6" align="center"><a href="#" class="a-hvr" >HAIDER QADIR KHAN</a></div>
-				<div class="column col-6" align="center" ><a href="About.html"class="a-hvr" alt="#">About</a></div>
+				<div class="column col-6" align="center" ><a href="about.html"class="a-hvr" alt="#">About</a></div>
 			</div>
 		</div>
 		
