--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
 	
 		.pad {
 			margin-left: 190px;
+			margin-right: 190px;
 		}
 
 		.a-hvr:hover {
@@ -69,7 +70,7 @@
 
 	<footer >
 
-		<div class="container-fluid col-12 pad-mar-footer" align="center" >
+		<div class="container col-12 pad-mar-footer" align="center" >
 
 			<P>
 				All materials  
