--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 		.h-hvr:hover{
 			color: #07b01b;
 		}
+		
+		.ul-pad{
+			padding:10px;
+		}
 
 	</style>
 
@@ -83,7 +87,7 @@
 				<h1 class="h-hvr" align="center">Haider Qadir Khan</h1>
 				<h3 class="h-hvr">Software Craftsman</h3>
 				
-				<ul>
+				<ul class="ul-pad">
 					<a href="https://github.com/HaiderQK" alt="#"" class="pad">	<i class="fa fa-github"  style="font-size:35px"></i></a>
 					<a href="#" class="pad"><i class="fa fa-linkedin-square" style="font-size:35px" ></i></a>	
 	 				<a href="#" class="pad"><i class="fa fa-twitter-square" style="font-size:35px" ></i></a>
