--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
 	<meta charset="utf-8">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="Haider Qadir Khan">
+	<meta name="author" content="Haider Qadir">
 
-	<meta name="keywords" content="haider, haider qadir, haider qadir khan,blog, developer">
+	<meta name="keywords" content="haider, haider qadir, haider qadir,blog, developer">
 	
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -75,7 +75,7 @@
 			<P>
 				All materials  
 				<a href="#" alt="#" class="a-hvr" >©</a> 
-				<a href="index.html" alt="#" class="a-hvr" >Haider Qadir Khan</a> 2019.
+				<a href="index.html" alt="#" class="a-hvr" >Haider Qadir</a> 2019.
 			</P>
 
 		</div>
