--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 	<title>HQKhan</title>
 	<meta charset="utf-8">
+	<meta name="google-site-verification" content="rOW1eYP7-sC4RkS0SqV-SNC9qSRRgDINYVNWzq39noY" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -69,7 +70,7 @@
 		
 		<div class="container-fluid">
 			<div class="row">
-				<div class="column col-6" align="center"><a href="#" class="a-hvr" >HAIDER QADIR KHAN</a></div>
+				<div class="column col-6" align="center"><a href="#" class="a-hvr" >HAIDER QADIR</a></div>
 				<div class="column col-6" align="center" ><a href="about.html"class="a-hvr" alt="#">About</a></div>
 			</div>
 		</div>
@@ -124,3 +125,4 @@
 
 </body>
 </html>
+
